--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MartBangunan">
-        <activity android:name=".ui.activity.selller.MainSellerActivity"></activity>
-        <activity android:name=".ui.activity.customer.RegistrationActivity"></activity>
-        <activity android:name=".ui.activity.customer.LoginActivity">
+        <activity android:name=".ui.activity.selller.RegistrationSeller2Activity"></activity>
+        <activity android:name=".ui.activity.selller.RegistrationSellerActivity" />
+        <activity android:name=".ui.activity.selller.LoginSellerActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.activity.selller.MainSellerActivity" />
+        <activity android:name=".ui.activity.customer.RegistrationActivity" />
+        <activity android:name=".ui.activity.customer.LoginActivity">
+
         </activity>
         <activity android:name=".ui.activity.customer.MainActivity" />
     </application>
