--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MartBangunan">
-        <activity android:name=".ui.LoginAsActivity"></activity>
+        <activity android:name=".ui.activity.customer.ProductActivity"></activity>
+        <activity android:name=".ui.LoginAsActivity" />
         <activity android:name=".ui.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +20,7 @@
         </activity>
         <activity android:name=".ui.activity.selller.RegistrationSeller2Activity" />
         <activity android:name=".ui.activity.selller.RegistrationSellerActivity" />
-        <activity android:name=".ui.activity.selller.LoginSellerActivity">
-
-        </activity>
+        <activity android:name=".ui.activity.selller.LoginSellerActivity"></activity>
         <activity android:name=".ui.activity.selller.MainSellerActivity" />
         <activity android:name=".ui.activity.customer.RegistrationActivity" />
         <activity android:name=".ui.activity.customer.LoginActivity" />
