--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    //image picker
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+
     //Cirle Image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
@@ -62,6 +65,9 @@ dependencies {
     //coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8.'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+    
+    //coil (image)
+    implementation("io.coil-kt:coil:1.3.2")
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
