--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.martbangunan.app">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MartBangunan">
-        <activity android:name=".ui.activity.customer.ProductActivity"></activity>
-        <activity android:name=".ui.LoginAsActivity" />
-        <activity android:name=".ui.SplashScreenActivity">
+        android:theme="@style/Theme.MartBangunan"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ui.activity.customer.Registration2Activity"></activity>
+        <activity android:name=".ui.activity.customer.ProductActivity" />
+        <activity android:name=".ui.activity.LoginAsActivity" />
+        <activity android:name=".ui.activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,10 +24,9 @@
         </activity>
         <activity android:name=".ui.activity.selller.RegistrationSeller2Activity" />
         <activity android:name=".ui.activity.selller.RegistrationSellerActivity" />
-        <activity android:name=".ui.activity.selller.LoginSellerActivity"></activity>
         <activity android:name=".ui.activity.selller.MainSellerActivity" />
         <activity android:name=".ui.activity.customer.RegistrationActivity" />
-        <activity android:name=".ui.activity.customer.LoginActivity" />
+        <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.customer.MainActivity" />
     </application>
 
