--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MartBangunan"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.activity.customer.Registration2Activity"></activity>
+        <activity android:name=".ui.activity.EditAccountActivity"></activity>
+        <activity android:name=".ui.activity.selller.EditImageProductActivity" />
+        <activity android:name=".ui.activity.selller.UploadProductActivity" />
+        <activity android:name=".ui.fragment.customer.ProductDetailActivity" />
+        <activity android:name=".ui.activity.customer.Registration2Activity" />
         <activity android:name=".ui.activity.customer.ProductActivity" />
         <activity android:name=".ui.activity.LoginAsActivity" />
         <activity android:name=".ui.activity.SplashScreenActivity">
