--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     
     //coil (image)
     implementation("io.coil-kt:coil:1.3.2")
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
     //midtrans (payment gateway)
     implementation 'com.midtrans:uikit:1.28.0-SANDBOX' // change the number to the latest version
